--- a/css/index.css
+++ b/css/index.css
@@ -11,13 +11,10 @@ div#MainArea{
 }
 
 /* Live文字 */
-#Text_LIVE{
+.Text_LIVE{
     color: #ffffff;
     font-size: 36px;
-    font-weight: 200;
-    padding-right: 20px;
     display:inline-block;
-    animation: rotate 5s linear infinite;
     width: fit-content;
 }
 
@@ -29,6 +26,7 @@ div#MainArea{
     text-shadow: 0 0 20px #0aafe6;
     line-height: 1.2;
     text-align: center;
+    padding-left: 20px;
 }
 
 /* アニメーション */
